--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ nav {
   flex-direction: column;
   width: 100%;
   align-items: center;
+  position: fixed;
+  top: 0;
+  background-color: #fff;
 }
 
 .topBar {
@@ -118,4 +121,42 @@ h2 {
 
 section {
   border-top: #606060 2px solid;
+}
+
+aside {
+  height: 300px;
+  width: auto;
+  overflow: scroll;
+  min-height: 100vh;
+  position: fixed;
+}
+
+.Abonnements,
+.Explorer,
+.Autres,
+.Autres2,
+.general2 {
+  border-top: solid 1px;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+main {
+  display: flex;
+  margin-top: 100px;
+}
+
+.contener {
+  display: flex;
+  flex-direction: column;
+  margin-left: 200px;
+  width: 100%;
 }
