--- a/styles.css
+++ b/styles.css
@@ -108,8 +108,7 @@ nav {
   height: 32px;
 }
 
-.topVideos
-{
+.topVideos {
   display: grid;
   grid-template-columns: 30% 30% 30%;
   grid-template-rows: 200px 200px;
@@ -118,9 +117,10 @@ nav {
   text-align: center;
   margin-bottom: 100px;
 }
-section
-{
+
+section {
   padding: 0.5em;
+  width: 100%;
 }
 
 
